@@ -1,3 +1,7 @@
+Improvements :
+
+* IECoreArnold::Renderer::shader() now additionally accepts shader names of the form "reference:nodeName", to allow shaders already in an ass file to be referenced by procedurals.
+
 7.5.0 :
 
 Additions :
